--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,75 +1,115 @@
 $bb: #0073d7;
 $by: #d9e021;
 
+.user{
+  padding-top: 80px;
+}
+
 /* エラーメッセージ */
 
 .error-alert{
   white-space: pre-line;
   line-height: 70%;
-  margin-left: 80px;
+  text-align: center;
+  padding-left: 0;
 }
 .error-message{
   font-size: 12px;
   color: red;
-  list-style-type: square;
+  list-style: none;
 }
 
 // ログイン
 
 .session{
   height: 700px;
+  padding-top: 100px;
+  background-color: white;
+}
+
+.reg{
+  padding-top: 100px;
   background-color: white;
 }
 
 .session-title,
 .reg-title,
 .event-title{
-  margin: 20px 0 0 80px;
-  display: flex;
-  align-items: center;
+  margin: 0 auto;
+  width: 600px;
+  padding: 20px 0 0 20px;
   & .title{
     font-size: 60px;
     font-family: 'Staatliches', cursive;
     letter-spacing: 2px;
-    margin-right: 20px;
+    margin-top: -15px;
   }
   & .text{
-    font-size: 12px;
+    font-size: 10px;
     font-weight: bold;
     letter-spacing: 2px;
   }
 }
 
+@media (max-width: 600px) {
+  .session-title,
+  .reg-title,
+  .event-title{
+    width: 400px;
+    text-align: center;
+    & .title{
+      font-size: 50px;
+      margin: -10px 0 0px 0;
+    }
+    & .text{
+      font-size: 10px;
+    }
+  }
+}
+
+
 .field{
-  margin: 0px 80px;
-  overflow: hidden;
-  height: 150px;
-  border-bottom: 1px solid black;
+  margin: 0 auto;
+  width: 600px;
+  height: 120px;
+  border-bottom: 1px solid #333333;
   display: flex;
   align-items: center;
-  position: relative;
-  & .item{
-    position: absolute;
-    left: 20px;
-    font-size: 12px;
-    font-weight: bold;
+  justify-content: space-between;
+  & .field-item{
+    width: 180px;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    & .item{
+      font-size: 13px;
+      font-weight: bold;
+      margin: 0 10px;
+    }
   }
   & .input{
-    position: absolute;
-    background-color: #f2f2f2;
-    border: none;
-    left: 100px;
-    height: 40px;
-    &.n{
-      width: 300px;
+    width: 400px;
+    &.n,
+    &.long,
+    &.short,
+    &.day{
+      height: 40px;
+      background-color: #f2f2f2;
+      border: none;
     }
-    &.hash{
-      width: 200px;
+    &.n{
+      width: 400px;
     }
     &.long{
-      margin-top: -280px;
       width: 400px;
-      height: 600px;
+      height: 400px;
+    }
+    &.short,{
+      width: 200px;
+    }
+    &.day{
+      width: 150px;
     }
     &.image{
       width: 150px;
@@ -101,26 +141,12 @@ $by: #d9e021;
 }
 
 .field.long{
-  height: 700px;
+  height: 500px;
 }
 
-.field-time{
-  margin: 0px 80px;
-  overflow: hidden;
-  height: 150px;
-  border-bottom: 1px solid black;
-  display: flex;
-  align-items: center;
-  position: relative;
-  & .item{
-    position: absolute;
-    left: 20px;
-    font-size: 12px;
-    font-weight: bold;
-  }
+.field{
   & .input-time{
-    border: none;
-    margin-left: 200px;
+    width: 400px;
     & .time{
       width: 60px;
       height: 40px;
@@ -132,38 +158,68 @@ $by: #d9e021;
 
 
 .mandatory{
-  position: absolute;
-  left: 150px;
-  width: 50px;
   color: red;
   font-size: 10px;
 }
 .any{
-  position: absolute;
-  left: 150px;
-  width: 50px;
   color: skyblue;
   font-size: 10px;
 }
 
 .submit{
-  margin: 0px 80px;
+  text-align: center;
   &.login,
-  &.reg,
+  &.new,
   &.create,
   &.joining{
-  background-color: black;
-  height: 50px;
-  width: 100%;
-  margin: 40px 0 100px 0;
-  color: white;
-  font-size: 12px;
-  font-weight: bold;
-  letter-spacing: 3px;
-  cursor:pointer;
-  &:hover{
-    opacity: 80%;
+    background-color: black;
+    height: 50px;
+    width: 600px;
+    margin: 40px 0 100px 0;
+    color: white;
+    font-size: 12px;
+    font-weight: bold;
+    letter-spacing: 3px;
+    cursor:pointer;
+    &:hover{
+      opacity: 80%;
+    }
   }
+}
+
+@media (max-width: 600px) {
+  .field{
+    width: 400px;
+    flex-direction: column;
+    justify-content: center;
+    & .field-item{
+      justify-content: center;
+      & .item{
+        font-size: 13px;
+        font-weight: bold;
+        margin: 0 10px;
+      }
+    }
+    & .input{
+      width: 400px;
+      text-align: center;
+      &.image{
+        margin: 0 auto;
+      }
+    }
+  }
+  .field{
+    & .input-time{
+      text-align: center;
+    }
+  }
+  .submit{
+    &.login,
+    &.new,
+    &.create,
+    &.joining{
+      width: 400px;
+    }
   }
 }
 
@@ -221,4 +277,3 @@ $by: #d9e021;
   background-color: #f2f2f2;
   padding: 20px 0 80px 0;
 }
-
