--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
-<div class="user-top-bg">
-</div>
+<div class="user">
+
+  <div class="user-top-bg"></div>
 
     <div class='user-show-user'>
 
@@ -91,5 +92,7 @@
         </ul>
       <% end %>
     </div>
+
+</div>
 
 </div>
