--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -1,5 +1,10 @@
+.event {
+  padding-top: 100px;
+}
+
 .event-create {
   height: 80vh;
+  padding-top: 100px;
 }
 
 .event-box {
@@ -47,14 +52,15 @@
 }
 
 .event-list-box {
+  margin-top: 50px;
   background-color: #f2f2f2;
-  padding: 80px 80px;
+  padding: 80px 0;
 }
 
 .event-list {
   background-color: white;
   height: 100px;
-  width: 800px;
+  width: 600px;
   margin: 0 auto;
   margin-bottom: 30px;
   display: -webkit-box;
@@ -70,13 +76,16 @@
 .event-list .status {
   background-color: #0073d7;
   height: 100px;
-  width: 100px;
+  width: 50px;
+  -webkit-writing-mode: vertical-rl;
+      -ms-writing-mode: tb-rl;
+          writing-mode: vertical-rl;
   font-size: 14px;
   font-weight: bold;
   letter-spacing: 2px;
   color: white;
   text-align: center;
-  line-height: 100px;
+  line-height: 50px;
   margin-right: 20px;
 }
 
@@ -87,7 +96,7 @@
 }
 
 .event-list .level-title {
-  width: 450px;
+  width: 300px;
 }
 
 .event-list .level-title .title {
@@ -185,6 +194,31 @@
 .levelev.level-07 {
   width: 65px;
   background-color: #B3B3B3;
+}
+
+@media (max-width: 600px) {
+  .event-list-box {
+    margin-top: 30px;
+    background-color: #f2f2f2;
+    padding: 40px 0;
+  }
+  .event-list {
+    height: 70px;
+    width: 450px;
+  }
+  .event-list .status {
+    height: 70px;
+    width: 50px;
+  }
+  .event-list .organizer {
+    display: none;
+  }
+  .event-list .level-title {
+    width: 300px;
+  }
+  .event-list .level-title .title {
+    font-size: 15px;
+  }
 }
 
 .event-show {
