--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -2,10 +2,15 @@
 $bb: #0073d7;
 $by: #d9e021;
 
+.event{
+  padding-top: 100px;
+}
+
 // イベント作成完画面
 
 .event-create{
   height: 80vh;
+  padding-top: 100px;
 }
 
 .event-box{
@@ -44,14 +49,15 @@ $by: #d9e021;
 // イベント一覧表示
 
 .event-list-box{
+  margin-top: 50px;
   background-color: #f2f2f2;
-  padding: 80px 80px;
+  padding: 80px 0;
 }
 
 .event-list{
   background-color: white;
   height: 100px;
-  width: 800px;
+  width: 600px;
   margin: 0 auto;
   margin-bottom: 30px;
   display: flex;
@@ -61,13 +67,14 @@ $by: #d9e021;
   & .status{
     background-color: $bb;
     height: 100px;
-    width: 100px;
+    width: 50px;
+    writing-mode: vertical-rl;
     font-size: 14px;
     font-weight: bold;
     letter-spacing: 2px;
     color: white;
     text-align: center;
-    line-height: 100px;
+    line-height: 50px;
     margin-right: 20px;
   }
   & .date{
@@ -76,7 +83,7 @@ $by: #d9e021;
     font-weight: bold;
   }
   & .level-title{
-    width: 450px;
+    width: 300px;
     & .title{
       font-size: 18px;
       font-weight: bold;
@@ -149,11 +156,35 @@ $by: #d9e021;
   }
 }
 
+@media (max-width: 600px) {
+  .event-list-box{
+    margin-top: 30px;
+    background-color: #f2f2f2;
+    padding: 40px 0;
+  }
+  .event-list{
+    height: 70px;
+    width: 450px;
+    & .status{
+      height: 70px;
+      width: 50px;
+    }
+    & .organizer{
+      display: none;
+    }
+    & .level-title{
+      width: 300px;
+      & .title{
+        font-size: 15px;
+      }
+    }
+  }
+}
+
 
 // イベント詳細
 
 .event-show{
-  margin: 0 80px;
   display: flex;
 }
 
