--- a/app/assets/stylesheets/top.css
+++ b/app/assets/stylesheets/top.css
@@ -8,6 +8,7 @@ body {
 header {
   height: 80px;
   width: 100vw;
+  margin-top: 0;
   background-color: black;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -18,7 +19,8 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  z-index: 10;
+  z-index: 50;
+  position: fixed;
 }
 
 .header-left {
@@ -26,8 +28,7 @@ header {
 }
 
 .header-left.logo {
-  width: 100px;
-  margin-right: 10px;
+  width: 90px;
 }
 
 .header-right {
@@ -45,7 +46,7 @@ header {
   font-size: 12px;
   color: white;
   text-decoration: none;
-  margin-left: 20px;
+  margin-left: 10px;
   font-weight: bold;
   letter-spacing: 2px;
 }
@@ -62,7 +63,7 @@ header {
 
 .header-right.btn .login-btn {
   position: relative;
-  width: 130px;
+  width: 100px;
   height: 35px;
   margin-left: 20px;
 }
@@ -141,7 +142,7 @@ footer {
 }
 
 .footer-left.logo {
-  width: 100px;
+  width: 80px;
   margin-right: 10px;
 }
 
@@ -169,6 +170,7 @@ footer {
 }
 
 .top {
+  padding-top: 80px;
   -webkit-animation-name: kf-fadeIn;
           animation-name: kf-fadeIn;
   -webkit-animation-duration: 3s;
@@ -403,6 +405,44 @@ footer {
   }
 }
 
+@media (max-width: 600px) {
+  .contents-01 {
+    height: 500px;
+  }
+  .scroll {
+    display: none;
+  }
+  .contents-01-text {
+    position: absolute;
+    z-index: 10;
+  }
+  .contents-01-text .main-text {
+    margin: 50px 0 0 40px;
+    font-size: 150px;
+    line-height: 130px;
+  }
+  .contents-01-text .sub-text {
+    margin: 10px 0 0 50px;
+    font-size: 20px;
+    line-height: 30px;
+  }
+  .contents-01-bg {
+    height: 550px;
+    width: 600px;
+  }
+  .contents-01-bg .img-bg {
+    height: 550px;
+  }
+  .img-main {
+    height: 400px;
+    -o-object-position: 50% 0%;
+       object-position: 50% 0%;
+  }
+  .cover-slide {
+    height: 400px;
+  }
+}
+
 .contents-02 {
   background-color: #0073d7;
   overflow: hidden;
@@ -420,7 +460,7 @@ footer {
 }
 
 .contents-02-text .logo {
-  width: 20vw;
+  width: 220px;
 }
 
 .contents-02-text .text-01 {
@@ -450,7 +490,13 @@ footer {
 
 .explanation {
   margin-top: 50px;
-  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.explanation .explanation-img {
+  width: calc(100% / 3);
 }
 
 .bottm-box {
@@ -458,6 +504,30 @@ footer {
   width: 100vw;
   height: 50px;
   background-color: #0073d7;
+}
+
+@media (max-width: 600px) {
+  .contents-02-text {
+    margin: 30px 80px 0 80px;
+  }
+  .contents-02-text .logo {
+    width: 150px;
+  }
+  .contents-02-text .text-01 {
+    font-size: 10px;
+    margin-bottom: 20px;
+  }
+  .explanation {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 30px;
+  }
+  .explanation .explanation-img {
+    width: 100vw;
+    margin: -10px 0;
+  }
 }
 
 .contents-03 {
@@ -484,13 +554,22 @@ footer {
           align-items: center;
 }
 
-.info .day {
+.info .day-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.info .day-item .day {
   font-size: 14px;
   font-weight: bold;
   margin: 0 20px;
 }
 
-.info .item {
+.info .day-item .item {
   background-color: #0073d7;
   font-size: 12px;
   letter-spacing: 2px;
@@ -511,5 +590,52 @@ footer {
 
 .info .text:hover {
   color: #0073d7;
+}
+
+@media (max-width: 600px) {
+  .contents-03 {
+    height: 400px;
+  }
+  .info-title {
+    font-size: 40px;
+    margin-top: 50px;
+  }
+  .info {
+    height: 90px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .info .day-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .info .day-item .day {
+    margin: 0 10px 0 0;
+  }
+  .info .day-item .item {
+    font-size: 10px;
+    letter-spacing: 2px;
+    line-height: 15px;
+    width: 60px;
+    height: 15px;
+  }
+  .info .text {
+    font-size: 14px;
+  }
 }
 /*# sourceMappingURL=top.css.map */
