--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -1,32 +1,39 @@
 @charset "UTF-8";
+.user {
+  padding-top: 80px;
+}
+
 /* エラーメッセージ */
 .error-alert {
   white-space: pre-line;
   line-height: 70%;
-  margin-left: 80px;
+  text-align: center;
+  padding-left: 0;
 }
 
 .error-message {
   font-size: 12px;
   color: red;
-  list-style-type: square;
+  list-style: none;
 }
 
 .session {
   height: 700px;
+  padding-top: 100px;
+  background-color: white;
+}
+
+.reg {
+  padding-top: 100px;
   background-color: white;
 }
 
 .session-title,
 .reg-title,
 .event-title {
-  margin: 20px 0 0 80px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  margin: 0 auto;
+  width: 600px;
+  padding: 20px 0 0 20px;
 }
 
 .session-title .title,
@@ -35,58 +42,98 @@
   font-size: 60px;
   font-family: 'Staatliches', cursive;
   letter-spacing: 2px;
-  margin-right: 20px;
+  margin-top: -15px;
 }
 
 .session-title .text,
 .reg-title .text,
 .event-title .text {
-  font-size: 12px;
+  font-size: 10px;
   font-weight: bold;
   letter-spacing: 2px;
 }
 
+@media (max-width: 600px) {
+  .session-title,
+  .reg-title,
+  .event-title {
+    width: 400px;
+    text-align: center;
+  }
+  .session-title .title,
+  .reg-title .title,
+  .event-title .title {
+    font-size: 50px;
+    margin: -10px 0 0px 0;
+  }
+  .session-title .text,
+  .reg-title .text,
+  .event-title .text {
+    font-size: 10px;
+  }
+}
+
 .field {
-  margin: 0px 80px;
-  overflow: hidden;
-  height: 150px;
-  border-bottom: 1px solid black;
+  margin: 0 auto;
+  width: 600px;
+  height: 120px;
+  border-bottom: 1px solid #333333;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: relative;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-.field .item {
-  position: absolute;
-  left: 20px;
-  font-size: 12px;
+.field .field-item {
+  width: 180px;
+  margin-bottom: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.field .field-item .item {
+  font-size: 13px;
   font-weight: bold;
+  margin: 0 10px;
 }
 
 .field .input {
-  position: absolute;
+  width: 400px;
+}
+
+.field .input.n, .field .input.long, .field .input.short, .field .input.day {
+  height: 40px;
   background-color: #f2f2f2;
   border: none;
-  left: 100px;
-  height: 40px;
 }
 
 .field .input.n {
-  width: 300px;
-}
-
-.field .input.hash {
-  width: 200px;
+  width: 400px;
 }
 
 .field .input.long {
-  margin-top: -280px;
   width: 400px;
-  height: 600px;
+  height: 400px;
+}
+
+.field .input.short {
+  width: 200px;
+}
+
+.field .input.day {
+  width: 150px;
 }
 
 .field .input.image {
@@ -125,36 +172,14 @@
 }
 
 .field.long {
-  height: 700px;
+  height: 500px;
 }
 
-.field-time {
-  margin: 0px 80px;
-  overflow: hidden;
-  height: 150px;
-  border-bottom: 1px solid black;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: relative;
+.field .input-time {
+  width: 400px;
 }
 
-.field-time .item {
-  position: absolute;
-  left: 20px;
-  font-size: 12px;
-  font-weight: bold;
-}
-
-.field-time .input-time {
-  border: none;
-  margin-left: 200px;
-}
-
-.field-time .input-time .time {
+.field .input-time .time {
   width: 60px;
   height: 40px;
   background-color: #f2f2f2;
@@ -162,29 +187,23 @@
 }
 
 .mandatory {
-  position: absolute;
-  left: 150px;
-  width: 50px;
   color: red;
   font-size: 10px;
 }
 
 .any {
-  position: absolute;
-  left: 150px;
-  width: 50px;
   color: skyblue;
   font-size: 10px;
 }
 
 .submit {
-  margin: 0px 80px;
+  text-align: center;
 }
 
-.submit.login, .submit.reg, .submit.create, .submit.joining {
+.submit.login, .submit.new, .submit.create, .submit.joining {
   background-color: black;
   height: 50px;
-  width: 100%;
+  width: 600px;
   margin: 40px 0 100px 0;
   color: white;
   font-size: 12px;
@@ -193,8 +212,44 @@
   cursor: pointer;
 }
 
-.submit.login:hover, .submit.reg:hover, .submit.create:hover, .submit.joining:hover {
+.submit.login:hover, .submit.new:hover, .submit.create:hover, .submit.joining:hover {
   opacity: 80%;
+}
+
+@media (max-width: 600px) {
+  .field {
+    width: 400px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .field .field-item {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .field .field-item .item {
+    font-size: 13px;
+    font-weight: bold;
+    margin: 0 10px;
+  }
+  .field .input {
+    width: 400px;
+    text-align: center;
+  }
+  .field .input.image {
+    margin: 0 auto;
+  }
+  .field .input-time {
+    text-align: center;
+  }
+  .submit.login, .submit.new, .submit.create, .submit.joining {
+    width: 400px;
+  }
 }
 
 .user-top-bg {
