--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,9 +1,7 @@
 <% if model.errors.any? %>
-<div class="error-alert">
-  <ul>
+  <ul class="error-alert">
     <% model.errors.full_messages.each do |message| %>
     <li class='error-message'><%= message %></li>
     <% end %>
   </ul>
-</div>
 <% end %>
