--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -6,7 +6,7 @@ $by: #d9e021;
   padding-top: 100px;
 }
 
-// イベント作成完画面
+// イベント作成完了画面
 
 .event-create{
   height: 80vh;
@@ -15,7 +15,8 @@ $by: #d9e021;
 
 .event-box{
   height: 300px;
-  margin: 0 80px 100px 80px;
+  width: 600px;
+  margin: 0 auto;
   background-color: #f2f2f2;
   display: flex;
   flex-direction: column;
@@ -42,6 +43,13 @@ $by: #d9e021;
       font-weight: bold;
       letter-spacing: 2px;
     }
+  }
+}
+
+@media (max-width: 600px) {
+  .event-box{
+    width: 400px;
+    margin-top: 50px;
   }
 }
 
@@ -186,11 +194,13 @@ $by: #d9e021;
 
 .event-show{
   display: flex;
+  width: 600px;
+  margin: 0 auto;
 }
 
 .event-show-side{
   background-color:#f2f2f2;
-  width: 250px;
+  width: 220px;
   height: 370px;
   margin-top: 100px;
   & .event-show-user{
@@ -241,7 +251,7 @@ $by: #d9e021;
 .event-show-main{
   margin: 50px 0 0 50px;
   & .title{
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
     color: black;
     padding-bottom: 5px;
@@ -266,7 +276,8 @@ $by: #d9e021;
 }
 
 .event-title-mini{
-  margin-left: 80px;
+  width: 600px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   & .title{
@@ -284,7 +295,9 @@ $by: #d9e021;
 
 .participant-users{
   display: flex;
-  margin-left: 80px;
+  width: 600px;
+  margin: 0 auto;
+  overflow: auto;
     & .participant-user{
       margin-right: 30px;
       display: flex;
@@ -307,4 +320,41 @@ $by: #d9e021;
 }
 .space{
   height: 100px;
+}
+
+@media (max-width: 600px) {
+  .event-show{
+    flex-direction: column;
+    width: 400px;
+  }
+  .event-show-side{
+    margin: 0 auto;
+    margin-top: 110px;
+    width: 400px;
+  }
+  .event-show-main{
+    margin-left: 0;
+  }
+  .event-title-mini{
+    width: 400px;
+    & .title{
+      font-size: 30px;
+    }
+    & .text{
+      font-size: 10px;
+    }
+  }
+  .participant-users{
+    width: 400px;
+      & .participant-user{
+        margin-right: 20px;
+        & .user-img{
+          width: 50px;
+          height: 50px;
+        }
+      }
+  }
+  .participant-bg{
+    padding: 20px 0 40px 0;
+  }
 }
