--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -320,4 +320,10 @@
   background-color: #f2f2f2;
   padding: 20px 0 80px 0;
 }
+
+@media (max-width: 600px) {
+  .user-bottom-bg {
+    padding: 20px 0 20px 0;
+  }
+}
 /*# sourceMappingURL=users.css.map */
