--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -105,7 +105,7 @@ $by: #d9e021;
       width: 400px;
       height: 400px;
     }
-    &.short,{
+    &.short{
       width: 200px;
     }
     &.day{
@@ -276,4 +276,10 @@ $by: #d9e021;
 .user-bottom-bg{
   background-color: #f2f2f2;
   padding: 20px 0 80px 0;
+}
+
+@media (max-width: 600px) {
+  .user-bottom-bg{
+    padding: 20px 0 20px 0;
+  }
 }
