--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -249,7 +249,8 @@ $by: #d9e021;
 }
 
 .event-show-main{
-  margin: 50px 0 0 50px;
+  width: 350px;
+  padding-left: 30px;
   & .title{
     font-size: 20px;
     font-weight: bold;
