--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -251,6 +251,7 @@ $by: #d9e021;
 .event-show-main{
   width: 350px;
   padding-left: 30px;
+  margin: 0 auto;
   & .title{
     font-size: 20px;
     font-weight: bold;
