--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -336,6 +336,8 @@ $by: #d9e021;
   }
   .event-show-main{
     margin-left: 0;
+    margin-top: 30px;
+    padding: 0;
   }
   .event-title-mini{
     width: 400px;
