ヘッダー修正

--- a/app/assets/stylesheets/top.css
+++ b/app/assets/stylesheets/top.css
@@ -31,92 +31,184 @@ header {
   width: 90px;
 }
 
-.header-right {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-right: 20px;
-}
-
-.header-right.list {
-  list-style: none;
-}
-
-.header-right.list .text {
-  font-size: 12px;
-  color: white;
-  text-decoration: none;
-  margin-left: 10px;
-  font-weight: bold;
-  letter-spacing: 2px;
-}
-
-.header-right.list .text:hover {
   color: #d9e021;
+@media (min-width: 601px) {
+  .header-right {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-right: 20px;
+  }
+  .header-right.list {
+    list-style: none;
+  }
+  .header-right.list .text {
+    font-size: 12px;
+    color: white;
+    text-decoration: none;
+    margin-left: 10px;
+    font-weight: bold;
+    letter-spacing: 2px;
+  }
+  .header-right.list .text:hover {
+    color: #d9e021;
+  }
+  .header-right.btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .header-right.btn .login-btn {
+    position: relative;
+    width: 100px;
+    height: 35px;
+    margin-left: 20px;
+  }
+  .header-right.btn .login-btn span {
+    position: absolute;
+    top: 10px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    font-size: 12px;
+    letter-spacing: 2px;
+    font-weight: bold;
+    text-decoration: none;
+    line-height: 35px;
+    text-align: center;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    -webkit-transform-origin: center center -15px;
+            transform-origin: center center -15px;
+  }
+  .header-right.btn .login-btn .btn-b {
+    background-color: #d9e021;
+    color: black;
+    -webkit-transform: rotateX(-90deg);
+            transform: rotateX(-90deg);
+  }
+  .header-right.btn .login-btn .btn-a {
+    background-color: white;
+    color: black;
+    -webkit-transform: rotateX(0);
+            transform: rotateX(0);
+  }
+  .header-right.btn .login-btn .btn-c {
+    background-color: #333333;
+    color: black;
+    color: white;
+    -webkit-transform: rotateX(-90deg);
+            transform: rotateX(-90deg);
+  }
+  .header-right.btn .login-btn:hover .btn-b,
+  .header-right.btn .login-btn:hover .btn-c {
+    -webkit-transform: rotateX(0);
+            transform: rotateX(0);
+  }
+  .header-right.btn .login-btn:hover .btn-a {
+    -webkit-transform: rotateX(90deg);
+            transform: rotateX(90deg);
+  }
+  .sp-nav {
+    display: none;
+  }
 }
 
-.header-right.btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.header-right.btn .login-btn {
-  position: relative;
-  width: 100px;
-  height: 35px;
-  margin-left: 20px;
-}
-
-.header-right.btn .login-btn span {
-  position: absolute;
-  top: 10px;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  font-size: 12px;
-  letter-spacing: 2px;
-  font-weight: bold;
-  text-decoration: none;
-  line-height: 35px;
-  text-align: center;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  -webkit-transform-origin: center center -15px;
-          transform-origin: center center -15px;
-}
-
-.header-right.btn .login-btn .btn-b {
-  background-color: #d9e021;
-  color: black;
-  -webkit-transform: rotateX(-90deg);
-          transform: rotateX(-90deg);
-}
-
-.header-right.btn .login-btn .btn-a {
-  background-color: white;
-  color: black;
-  -webkit-transform: rotateX(0);
-          transform: rotateX(0);
-}
-
-.header-right.btn .login-btn .btn-c {
-  background-color: #333333;
-  color: black;
-  color: white;
-  -webkit-transform: rotateX(-90deg);
-          transform: rotateX(-90deg);
-}
-
-.header-right.btn .login-btn:hover .btn-b,
-.header-right.btn .login-btn:hover .btn-c {
-  -webkit-transform: rotateX(0);
-          transform: rotateX(0);
-}
-
-.header-right.btn .login-btn:hover .btn-a {
-  -webkit-transform: rotateX(90deg);
-          transform: rotateX(90deg);
+@media (max-width: 600px) {
+  .pc-nav {
+    display: none;
+  }
+  .sp-nav .header-event-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+  }
+  .sp-nav .header-event-btn .header-event-btn-text {
+    list-style: none;
+    height: 100px;
+    width: 100px;
+    background-color: #d9e021;
+    border-radius: 50%;
+    margin-bottom: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.5);
+            box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.5);
+  }
+  .sp-nav .header-event-btn .header-event-btn-text .text {
+    font-size: 12px;
+    color: #333333;
+    text-decoration: none;
+    font-weight: bold;
+    letter-spacing: 1px;
+  }
+  .sp-nav .header-event-btn .header-event-btn-text .text:hover {
+    color: #d9e021;
+  }
+  .sp-nav .header-right {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-right: 20px;
+    margin-top: -10px;
+  }
+  .sp-nav .header-right.btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .sp-nav .header-right.btn .login-btn {
+    position: relative;
+    width: 100px;
+    height: 35px;
+    margin-left: 20px;
+  }
+  .sp-nav .header-right.btn .login-btn span {
+    position: absolute;
+    top: 10px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    font-size: 12px;
+    letter-spacing: 1px;
+    font-weight: bold;
+    text-decoration: none;
+    line-height: 35px;
+    text-align: center;
+  }
+  .sp-nav .header-right.btn .login-btn .btn-b {
+    background-color: #d9e021;
+    color: black;
+    -webkit-transform: rotateX(-90deg);
+            transform: rotateX(-90deg);
+  }
+  .sp-nav .header-right.btn .login-btn .btn-a {
+    background-color: white;
+    color: black;
+    -webkit-transform: rotateX(0);
+            transform: rotateX(0);
+  }
+  .sp-nav .header-right.btn .login-btn .btn-c {
+    background-color: #333333;
+    color: black;
+    color: white;
+    -webkit-transform: rotateX(-90deg);
+            transform: rotateX(-90deg);
+  }
 }
 
 footer {
